<resources>
    <string name="app_name">AndroidTestApp</string>
    <string name="btn_fr_green_text">Open Green Fragment</string>
    <string name="btn_fr_red_text">Open Red Fragment</string>
    <string name="btn_fr_blue_text">Open Blue Fragment</string>
    <string name="go_to_fragment_windows"> Go To Fragment Windows </string>
    <string name="go_to_activity_windows"> Go To Activity Windows </string>
    <string name="go_to_material">Go To Material</string>
    <string name="textViewDescription">Roll OVER 60 And Win!</string>
    <string name="buttonRandom">Roll</string>
    <string name="textViewWinsCount">Wins</string>
    <string name="textViewLossesCount">Losses</string>
    <string name="ticker_course_text">0.1234567899999</string>
    <string name="ticker_percent_change_text">99.99</string>
    <string name="ticker_name_text">BTC-BTC</string>
    <string name="edit_text_random_result"></string>
    <string name="btn_go_to_recycler">Go To Recycler View</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recycler_view_loading">LOADING...</string>
    <string name="btn_got_to_services">Go To Services</string>
    <string name="btn_start_service">Start Service</string>
    <string name="btn_stop_service">Stop Service</string>
    <string name="btn_got_to_notifications">Go To Notifications</string>
    <string name="btn_send_notification">Send</string>
    <string name="btn_help_name">Help</string>
    <string name="action_ok">Ok</string>
    <string name="btn_got_to_investbox">Go To InvestBox</string>
    <string name="help_dialog_main">
    <![CDATA[
        <h2>Новости</h2>
        <br>
        <h3>Сейчас в СМИ</h3>
        <ul>
            <li>В ПФР разъяснили порядок получения новогодних выплат на детей</li>
            <li>Россия оспорит запрет Путину посещать Олимпиады и чемпионаты мира</li>
            <li>День Победы в Азербайджане 8 ноября станет выходным</li>
            <li>Мантуров заявил, что торговые сети начали снижать цены на масло и сахар</li>
        </ul>

        <h3>В Санкт-Петербурге</h3>
        <ul>
            <li>В Петербурге заявили о работе стационаров на пределе возможностей</li>
            <li>Первый в Петербурге гипермаркет «Магнит» открылся на Кушелевской дороге</li>
            <li>Прокуратура потребовала запретить песню Моргенштерна и аниме</li>
            <li>В Петербурге открыли прививочные пункты для вакцинации педагогов от COVID-19</li>
        </ul>

        <h3>Бла бла бла></h3>
        <ul>
            <li>----------------------------</li>
            <li>/////////////////////////////</li>
        </ul>
    ]]>
    </string>
    <string name="title_activity_invest_box">InvestBoxActivity</string>
    <string name="tab_ivnestplans">Invest Plans</string>
    <string name="tab_investments">Investments</string>
    <string name="tab_investhistory">History</string>
</resources>