<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_go_to_fragment_windows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClickOpenService"
        android:text="@string/go_to_fragment_windows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_go_to_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClickOpenMaterial"
        android:text="@string/go_to_material"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_go_to_activity_windows" />

    <Button
        android:id="@+id/btn_go_to_recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClickOpenRecycler"
        android:text="@string/btn_go_to_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_go_to_fragment_windows" />

    <Button
        android:id="@+id/btn_go_to_activity_windows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClickOpenSecondActivityWindows"
        android:text="@string/go_to_activity_windows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_go_to_recycler" />

    <Button
        android:id="@+id/btn_got_to_services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_got_to_services"
        android:onClick="onClickOpenService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_go_to_material" />


    <Button
        android:id="@+id/btn_got_to_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_got_to_notifications"
        android:onClick="onClickOpenNotifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_got_to_services" />

    <Button
        android:id="@+id/btn_got_to_investbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_got_to_investbox"
        android:onClick="onClickOpenIvestBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_got_to_notifications" />
</androidx.constraintlayout.widget.ConstraintLayout>